[package]
name = "rumble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
mongodb = {version = "2.3.1", features = ["tokio-runtime"]}
tokio = {version = "1.21.2", features = ["full"]}
